dev/core-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: core-frontend
