dev/dashboard-ingress.yaml
#Define ingress for core-fronted service and expose it on port 80 for public network
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - dashboard.devemleria.pl
      secretName: dashboard-tls-secret
  rules:
    - host: dashboard.devemleria.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
